# geometry-shader-explosion

./: pyproject.toml
resources/models/: car.mtl
resources/shaders/: fragment-shader.frag  geometry-shader.geom  vertex-shader.vert
src/: camera.py  config.py  loader.py  main.py  shaders.py  util.py  window.py
