[project]
name = "geometry-shader-explosion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "objloader>=0.2.0",
    "pyglm>=2.8.3",
]

[tool.pyright]
typeCheckingMode = "basic"
reportAttributeAccessIssue = "none"
ignore = ["moderngl", "moderngl_window", "pyglm", "objloader"]
