[project]
name = "geometry-shader-explosion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pygame>=2.6.1",
    "pyglm>=2.8.3",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pywavefront>=1.3.3",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff.lint]
select = ["I"]
